cambio de iconos, faltas de ortografia y nuevo texto

--- a/about-us.html
+++ b/about-us.html
@@ -108,7 +108,7 @@
                     MOTIVADA A AYUDARTE</h4>
                     <p></p>
 
-                    <a class="main_btn" href="#">leer mas</a>
+                    <a class="main_btn" href="#">Leer más</a>
 
                 </div>
             </div>
@@ -137,7 +137,7 @@
                     <h4>Tadeo Vega</h4>
                     <p class="designation">Personal</p>
                     <p>
-                       Estamos listos para ayudarte cuenta conmigo!
+                       ¡Estamos listos para ayudarte cuenta conmigo!
                     </p>    
                 </div>
             </div>
@@ -149,7 +149,7 @@
                     <h4>Gael Razo</h4>
                     <p class="designation">Personal</p>
                     <p>
-                       Si ocupas ayuda a qui estamos nosotros!
+                       Si ocupas ayuda aquí estamos nosotros!
                     </p>
 
                 </div>
@@ -162,7 +162,7 @@
                     <h4>Brisa Vazques</h4>
                     <p class="designation">Personal</p>
                     <p>
-                       Me encanta ayudar a los demas, contactanos!
+                       Me encanta ayudar a los demás, contáctanos!
                    </p>  
                </div>
            </div>
@@ -174,7 +174,7 @@
                 <h4>Jennifer Ortega</h4>
                 <p class="designation">Personal</p>
                 <p>
-                    Sabemos como ayudarte solo dinos!
+                    ¡Sabemos cómo ayudarte solo dinos!
                 </p>                 
             </div>
         </div>
@@ -187,7 +187,7 @@
                 <h4>Greogorio Ornelas</h4>
                 <p class="designation">Personal</p>
                 <p>
-                   Tenemos metodos para triunfar muy seguros!
+                    Tenemos métodos para triunfar muy seguros!
                 </p>  
             </div>
         </div>
