--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
   <!--================Hero Banner Area Start =================-->
   <section class="hero-banner hero-banner-sm">
     <div class="container text-center">
-      <h2>Contactanos</h2>
+      <h2>Contáctanos</h2>
       <nav aria-label="breadcrumb" class="banner-breadcrumb">
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="#">casa</a></li>
@@ -178,7 +178,7 @@
           <div class="media contact-info">
             <span class="contact-info__icon"><i class="ti-email"></i></span>
             <div class="media-body">
-              <h3><a href="mailto:support@colorlib.com">HelpingUgto@gmail.com</a></h3>
+              <h3><a href="mailto:support@colorlib.com">HelpinUgto@gmail.com</a></h3>
               <p>Contactanos</p>
             </div>
           </div>
