--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     MOTIVADA A AYUDARTE</h4>
                     <p></p>
 
-                    <a class="main_btn" href="#">leer mas</a>
+                    <a class="main_btn" href="#">Leer más</a>
 
                 </div>
             </div>
@@ -118,6 +118,33 @@
     </div>
 </section>
 <!--================About Area End =================-->
+<!--================Mision area =================-->
+<section class="testimonial-area area-padding">
+    <div class="container">
+     <div class="area-heading">
+        <h3 class="line">Misión</h3>
+        <p>Prestar con calidad, oportunidad y eficiencia nuestros servicios de informacion y orientación al cliente, brindándole el valor y seguridad de que obtendrá los mejores resultados, teniendo en cuenta que se debe tener una actitud emprendedora y postura crítica.</p>
+    </div>
+    <div class="area-heading">
+        <h3 class="line">Visión</h3>
+        <p>Nuestra visión es darnos a conocer mas, para poder seguir orientando a nuevas empresas, a empresas fijas o en desarrollo a crecer dentro del mercado global.</p>
+    </div>
+    <div class="area-heading">
+        <h3 class="line">Objetivo principal</h3>
+        <p>Detectar el punto de error o falla, detectar eficiencias y deficiencias, para comprender el comportamiento de la empresa y empezar a trabajar las alternativas de solucion o las propuestas de crecimiento.</p>
+    </div>
+     <div class="area-heading">
+        <h3 class="line">Quienes somos</h3>
+        <p>Fundada en el 019 'Helpin' U' es una empresa con el objetivo de ayudarte a encontrar los mejores caminos que te guiaran al éxito en tu negocio.
+Somos una empresa que trabaja con las pequeñas y grandes empresas a nivel nacional para reinventar a través de la tecnología y herramientas al alcance para construir modelos de negocios más eficientes. Te ayudaremos a encontrar los mejores caminos para tu negocio, nuestra empresa se dedica a ayudar, sustentar y aconsejar a las empresas que quieren emprender un negocio, nosotros los guiamos para  promocionarse y  vender más sus productos.
+Contacta con nuestro equipo ellos con gusto te atenderán.
+.</p>
+    </div>
+</div>
+</div>
+</section>
+
+<!--================Mision area End =================-->
 
 <!--================Service  Area =================-->
 <section class="service-area area-padding">
@@ -136,8 +163,11 @@
                         <img src="img/icono1.png" alt="">
                     </div><br><br><br>
                     <div class="service-content">
-                        <h5>Llegaremos a la cima</h5>
-                        <p>te ayudaremos a llegar a la cima con tu negocio</p>
+                        <h5>Orientación</h5>
+                        <p>**Estudios económicos, sociales, de mercado o de viabilidad técnica,*A partir del estudio definimos estrategias,*Gestión de actividades, y áreas de trabajo
+*Análisis y evaluación de la empresa.
+
+</p>&nbsp
                     </div>
                 </div>
             </div>
@@ -149,8 +179,10 @@
                         <img src="img/icono2.png" alt="">
                     </div><br><br><br>
                     <div class="service-content">
-                        <h5>Mas ganancias, menos tiempo</h5>
-                        <p>recolectaras mas ganancias en menos tiempo</p>
+                        <h5>Capacitación financiera</h5>
+                        <p>Ser autosuficiente con el dinero, establece prioridades y destina recursos. Capacitación económica a la empresa                
+                        </p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+
                     </div>
                 </div>
             </div>
@@ -163,8 +195,8 @@
                         <img src="img/icono3.png" alt="">
                     </div><br><br><br>
                     <div class="service-content">
-                        <h5>Te encontraran desde cualquier parte</h5>
-                        <p>podran saber de ti desde la comodidad de su hogar</p>
+                        <h5>Ecuaciones diferenciales</h5>
+                        <p>En las matemáticas aplicadas las funciones usualmente expresan cantidades físicas, las derivadas representan sus razones de cambio y la ecuación define la relación entre ellas.</p>&nbsp&nbsp
                     </div>
                 </div>
             </div>
@@ -176,8 +208,8 @@
                         <img src="img/icono4.png" alt="">
                     </div><br><br><br>
                     <div class="service-content">
-                        <h5>Encontraremos a tus clientes</h5>
-                        <p>con nuestra ayuda encontraras a clientes frecuentes y fieles</p>
+                        <h5>Modelos matemáticos</h5>
+                        <p> Dependiendo del objetivo buscado y del diseño del mismo modelo pueden servir para predecir el valor de las variables en el futuro, hacer hipótesis, evaluar los efectos de una determinada política o actividad, entre otros objetivos.</p>
                     </div>
                 </div>
             </div>
@@ -196,7 +228,7 @@
     <div class="container">
      <div class="area-heading">
         <h3 class="line">Proyectos </h3>
-        <p>Algunos estan en proceso y otros terminados.</p>
+        <p>Algunos están en proceso y otros terminados.</p>
 
     </div>
 
@@ -259,6 +291,8 @@
 </section>
 <!--================ End Portfolio Area =================-->
 
+<!--================ End Portfolio Area =================-->
+
 
 <!--================ Start Testimonial Area =================-->
 <section class="testimonial-area area-padding">
@@ -278,7 +312,7 @@
                     <h4>Tadeo Vega</h4>
                     <p class="designation">Personal</p>
                     <p>
-                       Estamos listos para ayudarte cuenta conmigo!
+                       ¡Estamos listos para ayudarte cuenta conmigo!
                     </p>    
                 </div>
             </div>
@@ -290,7 +324,7 @@
                     <h4>Gael Razo</h4>
                     <p class="designation">Personal</p>
                     <p>
-                       Si ocupas ayuda aqui estamos nosotros!
+                       Si ocupas ayuda aquí estamos nosotros!
                     </p>
 
                 </div>
@@ -303,7 +337,7 @@
                     <h4>Brisa Vazques</h4>
                     <p class="designation">Personal</p>
                     <p>
-                       Me encanta ayudar a los demas, contactanos!
+                       Me encanta ayudar a los demás, contáctanos!
                    </p>  
                </div>
            </div>
@@ -315,7 +349,7 @@
                 <h4>Jennifer Ortega</h4>
                 <p class="designation">Personal</p>
                 <p>
-                    Sabemos como ayudarte solo dinos!
+                    ¡Sabemos cómo ayudarte solo dinos!
                 </p>                 
             </div>
         </div>
@@ -328,7 +362,7 @@
                 <h4>Greogorio Ornelas</h4>
                 <p class="designation">Personal</p>
                 <p>
-                   Tenemos metodos para triunfar muy seguros!
+                    Tenemos métodos para triunfar muy seguros!
                 </p>  
             </div>
         </div>
@@ -356,7 +390,7 @@
     <div class="container">
       <div class="area-heading">
         <h3 class="line">Otras Noticias</h3>
-        <p>Enterate de estas noticias!.</p>
+        <p>Entérate de estas noticias.</p>
 
     </div>
 
@@ -443,12 +477,12 @@
 
                 <div class="form-group row no-gutters">
                     <div class="col-lg-8 col-md-8 col-7">
-                        <input name="EMAIL" placeholder="correo electronico" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Your Email Address '"
+                        <input name="EMAIL" placeholder="correo electronico" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Tu correo electronico'"
                         required="" type="email">
                     </div>
 
                     <div class="col-lg-4 col-md-4 col-5">
-                        <button class="nw-btn main_btn circle">suscribir
+                        <button class="nw-btn main_btn circle">Suscribir
                             <span class="lnr lnr-arrow-right"></span>
                         </button>
                     </div>
@@ -456,8 +490,8 @@
                 <div class="info"></div>
             </form>
         </div>
-        <p>Suscribete para obtener ofertas limitadas y promociones</p>
-        <a class="footer-link" href="#">politicas de privacidad</a>
+        <p>Suscríbete para obtener ofertas limitadas y promociones.</p>
+        <a class="footer-link" href="#">Políticas de privacidad.</a>
     </div>
 </div>
 </div>
