--- a/project.html
+++ b/project.html
@@ -179,7 +179,7 @@
                     <h4>Tadeo Vega</h4>
                     <p class="designation">Personal</p>
                     <p>
-                       Estamos listos para ayudarte cuenta conmigo!
+                       ¡Estamos listos para ayudarte cuenta conmigo!
                     </p>    
                 </div>
             </div>
@@ -191,7 +191,7 @@
                     <h4>Gael Razo</h4>
                     <p class="designation">Personal</p>
                     <p>
-                       Si ocupas ayuda aqui estamos nosotros!
+                       Si ocupas ayuda aquí estamos nosotros!
                     </p>
 
                 </div>
@@ -204,7 +204,7 @@
                     <h4>Brisa Vazques</h4>
                     <p class="designation">Personal</p>
                     <p>
-                       Me encanta ayudar a los demas, contactanos!
+                       Me encanta ayudar a los demás, contáctanos!
                    </p>  
                </div>
            </div>
@@ -216,7 +216,7 @@
                 <h4>Jennifer Ortega</h4>
                 <p class="designation">Personal</p>
                 <p>
-                    Sabemos como ayudarte solo dinos!
+                    ¡Sabemos cómo ayudarte solo dinos!
                 </p>                 
             </div>
         </div>
@@ -229,7 +229,7 @@
                 <h4>Greogorio Ornelas</h4>
                 <p class="designation">Personal</p>
                 <p>
-                   Tenemos metodos para triunfar muy seguros!
+                    Tenemos métodos para triunfar muy seguros!
                 </p>  
             </div>
         </div>
