--- a/service.html
+++ b/service.html
@@ -122,8 +122,8 @@
                         <img src="img/icono2.png" alt="">
                     </div><br><br><br>
                     <div class="service-content">
-                        <h5>Mas ganancias, menos tiempo</h5>
-                        <p>recolectaras mas ganancias en menos tiempo</p>
+                        <h5>Más ganancias, menos tiempo</h5>
+                        <p>recolectaras más ganancias en menos tiempo</p>
                     </div>
                 </div>
             </div>
@@ -137,7 +137,7 @@
                     </div><br><br><br>
                     <div class="service-content">
                         <h5>Te encontraran desde cualquier parte</h5>
-                        <p>podran saber de ti desde la comodidad de su hogar</p>
+                        <p>podrán saber de ti desde la comodidad de su hogar</p>
                     </div>
                 </div>
             </div>
@@ -154,7 +154,7 @@
                     </div>
                 </div>
             </div>
-
+            
         </div>
     </div>
 </section>
