cambio de ayuda

--- a/service.html
+++ b/service.html
@@ -161,92 +161,75 @@
 <!--================Service Area end =================-->
 
 <!--================ Start Testimonial Area =================-->
-<section class="testimonial-area area-padding">
+<section class="service-area area-padding">
     <div class="container">
-     <div class="area-heading">
-        <h3 class="line">Personal</h3>
-        <p>Estamos listos para ayudarte!</p>
+        <div class="area-heading">
+            <h3 class="line">En que te podemos ayudar</h3>
+            <p>Juntos podemos lograr todo.</p>
 
-    </div>
-    <div class="row">
-        <div class="active-testimonial-carusel owl-carousel">
-            <div class="single-testimonial item d-flex flex-row">
-                <div class="thumb">
-                    <img class="img-fluid" src="perfil/cabe.jpg" alt="">
-                </div>
-                <div class="desc">
-                    <h4>Tadeo Vega</h4>
-                    <p class="designation">Personal</p>
-                    <p>
-                       Estamos listos para ayudarte cuenta conmigo!
-                    </p>    
-                </div>
-            </div>
-            <div class="single-testimonial item d-flex flex-row">
-                <div class="thumb">
-                    <img class="img-fluid" src="perfil/bola.jpg" alt="">
-                </div>
-                <div class="desc">
-                    <h4>Gael Razo</h4>
-                    <p class="designation">Personal</p>
-                    <p>
-                       Si ocupas ayuda aqui estamos nosotros!
-                    </p>
-
-                </div>
-            </div>
-            <div class="single-testimonial item d-flex flex-row">
-                <div class="thumb">
-                    <img class="img-fluid" src="perfil/brisa.jpg" alt="">
-                </div>
-                <div class="desc">
-                    <h4>Brisa Vazques</h4>
-                    <p class="designation">Personal</p>
-                    <p>
-                       Me encanta ayudar a los demas, contactanos!
-                   </p>  
-               </div>
-           </div>
-           <div class="single-testimonial item d-flex flex-row">
-            <div class="thumb">
-                <img class="img-fluid" src="perfil/jenni.jpg" alt="">
-            </div>
-            <div class="desc">
-                <h4>Jennifer Ortega</h4>
-                <p class="designation">Personal</p>
-                <p>
-                    Sabemos como ayudarte solo dinos!
-                </p>                 
-            </div>
         </div>
+        <div class="row">
 
-        <div class="single-testimonial item d-flex flex-row">
-            <div class="thumb">
-                <img class="img-fluid" src="perfil/gollo.jpg" alt="">
-            </div>
-            <div class="desc">
-                <h4>Greogorio Ornelas</h4>
-                <p class="designation">Personal</p>
-                <p>
-                   Tenemos metodos para triunfar muy seguros!
-                </p>  
-            </div>
-        </div>
-                <div class="single-testimonial item d-flex flex-row">
-                    <div class="thumb">
-                        <img class="img-fluid" src="perfil/pablo.jpg" alt="">
-                    </div>
-                    <div class="desc">
-                        <h4>Pablo Martinez</h4>
-                        <p class="designation">Personal</p>
-                        <p>
-                            Se lo que necesitas mi equipo y yo podemos ayudarte!
-                        </p>
+            <!-- Single service -->
+            <div class="col-md-6 col-xl-3">
+                <div class="single-service">
+                    <div class="service-icon">
+                        <img src="img/icono1.png" alt="">
+                    </div><br><br><br>
+                    <div class="service-content">
+                        <h5>Orientación</h5>
+                        <p>**Estudios económicos, sociales, de mercado o de viabilidad técnica,*A partir del estudio definimos estrategias,*Gestión de actividades, y áreas de trabajo
+*Análisis y evaluación de la empresa.
+
+</p>&nbsp
                     </div>
                 </div>
+            </div>
+
+            <!-- Single service -->
+            <div class="col-md-6 col-xl-3">
+                <div class="single-service">
+                    <div class="service-icon">
+                        <img src="img/icono2.png" alt="">
+                    </div><br><br><br>
+                    <div class="service-content">
+                        <h5>Capacitación financiera</h5>
+                        <p>Ser autosuficiente con el dinero, establece prioridades y destina recursos. Capacitación económica a la empresa                
+                        </p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+
+                    </div>
+                </div>
+            </div>
+
+
+            <!-- Single service -->
+            <div class="col-md-6 col-xl-3">
+                <div class="single-service">
+                    <div class="service-icon">
+                        <img src="img/icono3.png" alt="">
+                    </div><br><br><br>
+                    <div class="service-content">
+                        <h5>Ecuaciones diferenciales</h5>
+                        <p>En las matemáticas aplicadas las funciones usualmente expresan cantidades físicas, las derivadas representan sus razones de cambio y la ecuación define la relación entre ellas.</p>&nbsp&nbsp
+                    </div>
+                </div>
+            </div>
+
+            <!-- Single service -->
+            <div class="col-md-6 col-xl-3">
+                <div class="single-service">
+                    <div class="service-icon">
+                        <img src="img/icono4.png" alt="">
+                    </div><br><br><br>
+                    <div class="service-content">
+                        <h5>Modelos matemáticos</h5>
+                        <p> Dependiendo del objetivo buscado y del diseño del mismo modelo pueden servir para predecir el valor de las variables en el futuro, hacer hipótesis, evaluar los efectos de una determinada política o actividad, entre otros objetivos.</p>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
     </div>
-</div>
-</div>
 </section>
 <!--================ End Testimonial Area =================-->
 <!--================ start footer Area =================-->
